[package]
name = "foyer-bytesize"
description = "An utility for human-readable bytes representations. Forked from https://github.com/hyunsik/bytesize ."
version = "2.0.0"
authors = ["Hyunsik Choi <hyunsik.choi@gmail.com>", "MrCroxx <mrcroxx@outlook.com>"]
edition = "2021"

homepage = "https://github.com/foyer-rs/bytesize/"
documentation = "https://docs.rs/foyer-bytesize/"
repository = "https://github.com/foyer-rs/bytesize/"
readme = "README.md"
keywords = ["byte", "byte-size", "utility", "human-readable", "format"]
license = "Apache-2.0"

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
arbitrary = ["dep:arbitrary"]
default = []
serde = ["dep:serde"]
